# Wenje-Stats

./: .gitignore  README.md
ED4DSE/: .gitignore  README.md  ch01.md  ch02.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  pyproject.toml  requirements.txt
ED4DSE/1-Introduction/: 1-Experiments.rmd
ED4DSE/datasets/: Concrete_Data.csv  cast.txt  drug.csv  fluid data.txt  milling.csv  nanowire.csv  ozone.csv  popdensity.csv  resin.csv  so2.csv  turning.xlsx  weldcomp.csv  weldphy.csv  wind10.csv
ED4DSE/datasets/functional/: DVPI.csv  exp_desorption_130c_8.7torr_483nm.csv  exp_sorption_130c_8.7torr_483nm.csv  results.csv  run1.txt  run10.txt  run11.txt  run12.txt  run13.txt  run14.txt  run15.txt  run16.txt  run17.txt  run18.txt  run19.txt  run2.txt  run20.txt  run21.txt  run22.txt  run23.txt  run24.txt  run25.txt  run26.txt  run27.txt  run28.txt  run29.txt  run3.txt  run30.txt  run31.txt  run32.txt  run33.txt  run34.txt  run35.txt  run36.txt  run37.txt  run38.txt  run39.txt  run4.txt  run40.txt  run41.txt  (+15 more)
ED4DSE/notebooks/: ch01.ipynb  ch02.ipynb  ch03.ipynb  ch05.ipynb  ch06.ipynb  ch07.ipynb  ch08.ipynb  ch09.ipynb  ch10.ipynb  ch11.ipynb
ED4DSE/notes/: README.md  ch02.md  ch03.md  ch04.md  ch06.md  ch10.md  ch11.md
ED4DSE/src/pyexpdes/: __init__.py
ED4DSE/src/pyexpdes/chapters/: __init__.py  ch01_introduction.py  ch02_modeling.py  ch03_model_based_designs.py  ch04_space_filling_designs.py  ch05_representative_points.py  ch06_screening_designs.py  ch07_sequential_designs.py  ch08_multilevel_mixture.py  ch09_model_calibration.py  ch11_data_analysis.py  (+1 more)
(+116 files in other folders)
