[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyexpdes"
version = "0.1.0"
description = "Python port of Experimental Design for Data Science and Engineering"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyexpdes"]
